--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.26.9",
     "@clerk/nextjs": "^4.26.2",
     "next": "14.0.0",
     "react": "^18",
