--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/localizations": "^1.26.9",
     "@clerk/nextjs": "^4.26.2",
+    "@clerk/themes": "^1.7.9",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
