--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@clerk/localizations": "^1.26.9",
     "@clerk/nextjs": "^4.26.2",
     "next": "14.0.0",
+    "next-nprogress-bar": "^2.1.2",
+    "next13-progressbar": "^1.1.3",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
+    "react-nprogress": "^0.1.6",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
