--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
     "@clerk/localizations": "^1.26.9",
     "@clerk/nextjs": "^4.26.2",
     "@clerk/themes": "^1.7.9",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.356.0",
     "next": "14.0.0",
     "next-nprogress-bar": "^2.1.2",
+    "next-themes": "^0.2.1",
     "next13-progressbar": "^1.1.3",
     "nprogress": "^0.2.0",
     "react": "^18",
@@ -21,7 +28,11 @@
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-nprogress": "^0.1.6",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "sonner": "^1.4.3",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
