--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/localizations": "^1.26.9",
     "@clerk/nextjs": "^4.26.2",
     "@clerk/themes": "^1.7.9",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
