--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
+    "@types/react": "18.2.67",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
