--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/localizations": "^1.26.16",
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.10",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -30,6 +31,7 @@
     "react-modal": "^3.16.1",
     "react-nprogress": "^0.1.6",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.33.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
