--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
     "react-nprogress": "^0.1.6",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "sharp": "^0.33.3",
     "sonner": "^1.4.41",
