--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-toastify": "^9.1.3",
     "sharp": "^0.33.3",
     "sonner": "^1.4.41",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
